--- a/gallery.html
+++ b/gallery.html
@@ -1,39 +1,52 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Gallery - Book Haven</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-    <h1>Book Haven Bookstore</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</header>
-
 <section>
     <h2>Gallery</h2>
+
     <div class="gallery">
-        <div class="item">Book 1</div>
-        <div class="item">Book 2</div>
-        <div class="item">Book 3</div>
-        <div class="item">Book 4</div>
-        <div class="item">Book 5</div>
-        <div class="item">Book 6</div>
-        <div class="item">Book 7</div>
-        <div class="item">Book 8</div>
-        <div class="item">Book 9</div>
+
+        <div class="item">
+            <img src="images/brie.jpg" alt="Brie Mine 4Ever book">
+            <p>Brie Mine 4Ever</p>
+        </div>
+
+        <div class="item">
+            <img src="images/glory.jpg" alt="Glory Riders book">
+            <p>Glory Riders</p>
+        </div>
+
+        <div class="item">
+            <img src="images/sorcerer.jpg" alt="Sorcerer's Shadowed Chronicles">
+            <p>Sorcerer’s Shadowed Chronicles</p>
+        </div>
+
+        <div class="item">
+            <img src="images/ball.jpg" alt="Ball magazine">
+            <p>Ball Magazine</p>
+        </div>
+
+        <div class="item">
+            <img src="images/travel.jpg" alt="Travel magazine">
+            <p>Travel Magazine</p>
+        </div>
+
+        <div class="item">
+            <img src="images/eat.jpg" alt="Eat magazine">
+            <p>Eat Magazine</p>
+        </div>
+
+        <div class="item">
+            <img src="images/tote.jpg" alt="Canvas tote bag">
+            <p>Canvas Tote Bag</p>
+        </div>
+
+        <div class="item">
+            <img src="images/notebook.jpg" alt="Book Haven notebook">
+            <p>Book Haven Notebook</p>
+        </div>
+
+        <div class="item">
+            <img src="images/stickers.jpg" alt="Book Haven stickers">
+            <p>Book Haven Stickers</p>
+        </div>
+
     </div>
 </section>
-
-<footer>
-    <p>© 2026 Book Haven Bookstore</p>
-</footer>
-
-</body>
-</html>
