--- a/gallery.html
+++ b/gallery.html
@@ -1,35 +1,57 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery - Book Haven Bookstore</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header>
+    <h1>Book Haven Bookstore</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="events.html">Events</a>
+    </nav>
+</header>
+
 <section>
     <h2>Gallery</h2>
 
     <div class="gallery">
 
         <div class="item">
-            <img src="images/brie.jpg" alt="Brie Mine 4Ever book">
+            <img src="images/brie.jpg" alt="Brie Mine 4Ever book cover">
             <p>Brie Mine 4Ever</p>
         </div>
 
         <div class="item">
-            <img src="images/glory.jpg" alt="Glory Riders book">
+            <img src="images/glory.jpg" alt="Glory Riders book cover">
             <p>Glory Riders</p>
         </div>
 
         <div class="item">
-            <img src="images/sorcerer.jpg" alt="Sorcerer's Shadowed Chronicles">
-            <p>Sorcerer’s Shadowed Chronicles</p>
+            <img src="images/sorcerer.jpg" alt="Sorcerer's Shadowed Chronicles book cover">
+            <p>Sorcerer's Shadowed Chronicles</p>
         </div>
 
         <div class="item">
-            <img src="images/ball.jpg" alt="Ball magazine">
+            <img src="images/ball.jpg" alt="Ball Magazine cover">
             <p>Ball Magazine</p>
         </div>
 
         <div class="item">
-            <img src="images/travel.jpg" alt="Travel magazine">
+            <img src="images/travel.jpg" alt="Travel Magazine cover">
             <p>Travel Magazine</p>
         </div>
 
         <div class="item">
-            <img src="images/eat.jpg" alt="Eat magazine">
+            <img src="images/eat.jpg" alt="Eat Magazine cover">
             <p>Eat Magazine</p>
         </div>
 
@@ -50,3 +72,10 @@
 
     </div>
 </section>
+
+<footer>
+    <p>© 2026 Book Haven Bookstore</p>
+</footer>
+
+</body>
+</html>
