--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,9 @@
         </div>
 
         <div class="item">
-            <img src="images/Notebooks.jpg" alt="Book Haven notebook">
+    <img src="images/Notebooks.jpg" alt="Book Haven notebook">
+    <p>Book Haven Notebook</p>
+</div>
             <p>Book Haven Notebook</p>
         </div>
 
