--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,9 @@
         </div>
 
         <div class="item">
-            <img src="images/stickers.jpg" alt="Book Haven stickers">
+    <img src="images/stickers.jpg" alt="Book Haven stickers">
+    <p>Book Haven Stickers</p>
+</div>
             <p>Book Haven Stickers</p>
         </div>
 
