--- a/events.html
+++ b/events.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events - Book Haven Bookstore</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
@@ -22,26 +23,48 @@
 <section>
     <h2>Upcoming Events</h2>
 
-    <div class="event">
-        <h3>Author Meet & Greet</h3>
-        <p>Join us for an evening with local authors discussing their newest releases.</p>
-    </div>
+    <div class="events-container">
 
-    <div class="event">
-        <h3>Children's Story Time</h3>
-        <p>Weekly interactive reading session for kids ages 4–8.</p>
-    </div>
+        <div class="event-card">
+            <h3>📚 Author Meet & Greet</h3>
+            <p><strong>Date:</strong> March 15, 2026</p>
+            <p><strong>Time:</strong> 3:00 PM – 5:00 PM</p>
+            <p>Meet local fantasy author Joan Marie Verba as she discusses
+            <em>Sorcerer's Shadowed Chronicles</em>. Book signing included.</p>
+        </div>
 
-    <div class="event">
-        <h3>Community Book Club</h3>
-        <p>Monthly book discussion open to all readers.</p>
-    </div>
+        <div class="event-card">
+            <h3>👧 Children’s Storytime</h3>
+            <p><strong>Date:</strong> March 22, 2026</p>
+            <p><strong>Time:</strong> 11:00 AM</p>
+            <p>A fun and interactive reading session for children ages 4–8.
+            Snacks and coloring sheets provided!</p>
+        </div>
 
+        <div class="event-card">
+            <h3>☕ Book Club Night</h3>
+            <p><strong>Date:</strong> April 2, 2026</p>
+            <p><strong>Time:</strong> 6:30 PM</p>
+            <p>Join our monthly book club discussion featuring
+            <em>Glory Riders</em>. Coffee and pastries available.</p>
+        </div>
+
+        <div class="event-card">
+            <h3>🎨 Creative Writing Workshop</h3>
+            <p><strong>Date:</strong> April 10, 2026</p>
+            <p><strong>Time:</strong> 5:00 PM – 7:00 PM</p>
+            <p>Learn storytelling techniques and character development
+            from experienced local writers. All skill levels welcome.</p>
+        </div>
+
+    </div>
 </section>
 
 <footer>
-    <p>© 2026 Book Haven Bookstore</p>
+    <p>&copy; 2026 Book Haven Bookstore</p>
 </footer>
 
 </body>
 </html>
+
+  
