--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </nav>
 </header>
 
-<section>
+<section class="hero">
     <h2>Welcome to Book Haven</h2>
     <p>Your local treasure for books, magazines, and more.</p>
+    <a href="gallery.html" class="btn">Explore Our Collection</a>
 </section>
 
 <footer>
