--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Book Haven Bookstore</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
 
 <header>
@@ -17,9 +11,37 @@
 </header>
 
 <section class="hero">
-    <h2>Welcome to Book Haven</h2>
-    <p>Your local treasure for books, magazines, and more.</p>
-    <a href="gallery.html" class="btn">Explore Our Collection</a>
+    <div class="hero-content">
+        <h2>Discover Your Next Favorite Book</h2>
+        <p>Curated books, magazines, and literary treasures for every reader.</p>
+        <a href="gallery.html" class="btn">Browse Collection</a>
+    </div>
+</section>
+
+<section class="about-preview">
+    <div class="about-text">
+        <h3>Welcome to Book Haven</h3>
+        <p>
+            We are your local independent bookstore offering a wide selection of
+            fiction, nonfiction, magazines, and unique gifts for book lovers.
+            Join us for community events, author signings, and reading groups.
+        </p>
+    </div>
+</section>
+
+<section class="features">
+    <div class="feature-card">
+        <h4>Wide Selection</h4>
+        <p>Carefully curated books across all genres.</p>
+    </div>
+    <div class="feature-card">
+        <h4>Community Events</h4>
+        <p>Book clubs, author visits, and local gatherings.</p>
+    </div>
+    <div class="feature-card">
+        <h4>Indie & Local</h4>
+        <p>Proudly supporting independent authors and readers.</p>
+    </div>
 </section>
 
 <footer>
@@ -27,5 +49,4 @@
 </footer>
 
 </body>
-</html>
 
