--- a/index.html
+++ b/index.html
@@ -1,52 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Haven Bookstore</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
-<header>
-    <h1>Book Haven Bookstore</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</header>
+    <header>
+        <h1>Book Haven Bookstore</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 
-<section class="hero">
-    <div class="hero-content">
-        <h2>Discover Your Next Favorite Book</h2>
-        <p>Curated books, magazines, and literary treasures for every reader.</p>
-        <a href="gallery.html" class="btn">Browse Collection</a>
-    </div>
-</section>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Discover Your Next Favorite Book</h2>
+            <p>Curated books, magazines, and literary treasures for every reader.</p>
+            <a href="gallery.html" class="btn">Browse Collection</a>
+        </div>
+    </section>
 
-<section class="about-preview">
-    <div class="about-text">
-        <h3>Welcome to Book Haven</h3>
-        <p>
-            We are your local independent bookstore offering a wide selection of
-            fiction, nonfiction, magazines, and unique gifts for book lovers.
-            Join us for community events, author signings, and reading groups.
-        </p>
-    </div>
-</section>
+    <section class="about-preview">
+        <div class="about-text">
+            <h3>Welcome to Book Haven</h3>
+            <p>
+                We are your local independent bookstore offering a wide selection of
+                fiction, nonfiction, magazines, and unique gifts for book lovers.
+                Join us for community events, author signings, and reading groups.
+            </p>
+        </div>
+    </section>
 
-<section class="features">
-    <div class="feature-card">
-        <h4>Wide Selection</h4>
-        <p>Carefully curated books across all genres.</p>
-    </div>
-    <div class="feature-card">
-        <h4>Community Events</h4>
-        <p>Book clubs, author visits, and local gatherings.</p>
-    </div>
-    <div class="feature-card">
-        <h4>Indie & Local</h4>
-        <p>Proudly supporting independent authors and readers.</p>
-    </div>
-</section>
+    <section class="features">
+        <div class="feature-card">
+            <h4>Wide Selection</h4>
+            <p>Carefully curated books across all genres.</p>
+        </div>
 
-<footer>
-    <p>© 2026 Book Haven Bookstore</p>
-</footer>
+        <div class="feature-card">
+            <h4>Community Events</h4>
+            <p>Book clubs, author visits, and local gatherings.</p>
+        </div>
+
+        <div class="feature-card">
+            <h4>Indie & Local</h4>
+            <p>Proudly supporting independent authors and readers.</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2026 Book Haven Bookstore</p>
+    </footer>
 
 </body>
 
+</html>
