--- a/gallery.html
+++ b/gallery.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Gallery | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Book Haven Bookstore</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
@@ -16,69 +15,46 @@
         <a href="gallery.html">Gallery</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
-        <a href="events.html">Events</a>
     </nav>
 </header>
 
-<section>
-    <h2>Gallery</h2>
+<section class="page-header">
+    <h2>Explore Our Collection</h2>
+    <p>Handpicked titles for every kind of reader.</p>
+</section>
 
-    <div class="gallery">
+<section class="gallery-grid">
 
-        <div class="item">
-            <img src="images/brie.jpg" alt="Brie Mine 4Ever book cover">
-            <p>Brie Mine 4Ever</p>
-        </div>
+    <div class="book-card">
+        <img src="images/book1.jpg" alt="Fiction book cover">
+        <h3>Fiction</h3>
+        <p>Bestselling novels and literary classics.</p>
+    </div>
 
-        <div class="item">
-            <img src="images/glory.jpg" alt="Glory Riders book cover">
-            <p>Glory Riders</p>
-        </div>
+    <div class="book-card">
+        <img src="images/book2.jpg" alt="Nonfiction book cover">
+        <h3>Nonfiction</h3>
+        <p>Biographies, memoirs, and inspiring stories.</p>
+    </div>
 
-        <div class="item">
-            <img src="images/sorcerer.jpg" alt="Sorcerer's Shadowed Chronicles book cover">
-            <p>Sorcerer's Shadowed Chronicles</p>
-        </div>
+    <div class="book-card">
+        <img src="images/book3.jpg" alt="Children's book cover">
+        <h3>Children's Books</h3>
+        <p>Adventures for young readers.</p>
+    </div>
 
-        <div class="item">
-            <img src="images/ball.jpg" alt="Ball Magazine cover">
-            <p>Ball Magazine</p>
-        </div>
-
-        <div class="item">
-            <img src="images/travel.jpg" alt="Travel Magazine cover">
-            <p>Travel Magazine</p>
-        </div>
-
-        <div class="item">
-            <img src="images/eat.jpg" alt="Eat Magazine cover">
-            <p>Eat Magazine</p>
-        </div>
-
-        <div class="item">
-            <img src="images/tote.jpg" alt="Canvas tote bag">
-            <p>Canvas Tote Bag</p>
-        </div>
-
-        <div class="item">
-            <img src="images/Notebooks.jpg" alt="Book Haven notebook">
-            <p>Book Haven Notebook</p>
-        </div>
-
-        <div class="item">
-            <img src="images/stickers.jpg" alt="Book Haven stickers">
-            <p>Book Haven Stickers</p>
-        </div>
-
+    <div class="book-card">
+        <img src="images/book4.jpg" alt="Mystery book cover">
+        <h3>Mystery & Thriller</h3>
+        <p>Suspenseful stories that keep you guessing.</p>
     </div>
 
 </section>
 
 <footer>
-    <p>&copy; 2026 Book Haven Bookstore</p>
+    <p>© 2026 Book Haven Bookstore</p>
 </footer>
 
 </body>
 </html>
-
-        
+     
