--- a/gallery.html
+++ b/gallery.html
@@ -18,35 +18,66 @@
     </nav>
 </header>
 
-<section class="page-header">
-    <h2>Explore Our Collection</h2>
-    <p>Handpicked titles for every kind of reader.</p>
-</section>
-
 <section class="gallery-grid">
 
     <div class="book-card">
-        <img src="images/book1.jpg" alt="Fiction book cover">
-        <h3>Fiction</h3>
-        <p>Bestselling novels and literary classics.</p>
+        <img src="images/Notebooks.jpg" alt="Collection of notebooks">
+        <h3>Notebooks</h3>
+        <p>Beautiful journals and planners for writers and creatives.</p>
     </div>
 
     <div class="book-card">
-        <img src="images/book2.jpg" alt="Nonfiction book cover">
-        <h3>Nonfiction</h3>
-        <p>Biographies, memoirs, and inspiring stories.</p>
+        <img src="images/ball.jpg" alt="Sports themed item">
+        <h3>Sports Collection</h3>
+        <p>Books and merchandise for sports enthusiasts.</p>
     </div>
 
     <div class="book-card">
-        <img src="images/book3.jpg" alt="Children's book cover">
-        <h3>Children's Books</h3>
-        <p>Adventures for young readers.</p>
+        <img src="images/brie.jpg" alt="Lifestyle book">
+        <h3>Lifestyle</h3>
+        <p>Curated lifestyle reads and cozy finds.</p>
     </div>
 
     <div class="book-card">
-        <img src="images/book4.jpg" alt="Mystery book cover">
-        <h3>Mystery & Thriller</h3>
-        <p>Suspenseful stories that keep you guessing.</p>
+        <img src="images/eat.jpg" alt="Cookbook collection">
+        <h3>Cookbooks</h3>
+        <p>Delicious inspiration for every kitchen.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/glory.jpg" alt="Inspirational book">
+        <h3>Inspirational</h3>
+        <p>Motivational and uplifting reads.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/sorcerer.jpg" alt="Fantasy novel">
+        <h3>Fantasy</h3>
+        <p>Magical adventures and epic storytelling.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/stickers.jpg" alt="Bookstore stickers">
+        <h3>Stickers</h3>
+        <p>Fun and creative book-themed stickers.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/stickets.jpg" alt="Event tickets">
+        <h3>Event Tickets</h3>
+        <p>Tickets for author signings and book events.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/tote.jpg" alt="Book tote bag">
+        <h3>Tote Bags</h3>
+        <p>Stylish totes for your next bookstore haul.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/travel.jpg" alt="Travel books">
+        <h3>Travel</h3>
+        <p>Explore the world through curated travel guides.</p>
     </div>
 
 </section>
