--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gallery | Book Haven</title>
+    <title>Contact | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,68 +18,20 @@
     </nav>
 </header>
 
-<section class="gallery-grid">
+<section class="contact-section">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" required>
 
-    <div class="book-card">
-        <img src="images/Notebooks.jpg" alt="Collection of notebooks">
-        <h3>Notebooks</h3>
-        <p>Beautiful journals and planners for writers and creatives.</p>
-    </div>
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
 
-    <div class="book-card">
-        <img src="images/ball.jpg" alt="Sports themed item">
-        <h3>Sports Collection</h3>
-        <p>Books and merchandise for sports enthusiasts.</p>
-    </div>
+        <label for="message">Message</label>
+        <textarea id="message" rows="5" required></textarea>
 
-    <div class="book-card">
-        <img src="images/brie.jpg" alt="Lifestyle book">
-        <h3>Lifestyle</h3>
-        <p>Curated lifestyle reads and cozy finds.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/eat.jpg" alt="Cookbook collection">
-        <h3>Cookbooks</h3>
-        <p>Delicious inspiration for every kitchen.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/glory.jpg" alt="Inspirational book">
-        <h3>Inspirational</h3>
-        <p>Motivational and uplifting reads.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/sorcerer.jpg" alt="Fantasy novel">
-        <h3>Fantasy</h3>
-        <p>Magical adventures and epic storytelling.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/stickers.jpg" alt="Bookstore stickers">
-        <h3>Stickers</h3>
-        <p>Fun and creative book-themed stickers.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/stickets.jpg" alt="Event tickets">
-        <h3>Event Tickets</h3>
-        <p>Tickets for author signings and book events.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/tote.jpg" alt="Book tote bag">
-        <h3>Tote Bags</h3>
-        <p>Stylish totes for your next bookstore haul.</p>
-    </div>
-
-    <div class="book-card">
-        <img src="images/travel.jpg" alt="Travel books">
-        <h3>Travel</h3>
-        <p>Explore the world through curated travel guides.</p>
-    </div>
-
+        <button type="submit">Send Message</button>
+    </form>
 </section>
 
 <footer>
@@ -88,4 +40,6 @@
 
 </body>
 </html>
-     
+
+   
+      
