--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact | Book Haven</title>
+    <title>Gallery | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,20 +18,73 @@
     </nav>
 </header>
 
-<section class="contact-section">
-    <h2>Contact Us</h2>
-    <form class="contact-form">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" required>
+<section class="page-header">
+    <h2>Explore Our Collection</h2>
+    <p>Handpicked titles and curated items for every reader.</p>
+</section>
 
-        <label for="email">Email</label>
-        <input type="email" id="email" required>
+<section class="gallery-grid">
 
-        <label for="message">Message</label>
-        <textarea id="message" rows="5" required></textarea>
+    <div class="book-card">
+        <img src="images/Notebooks.jpg" alt="Notebooks collection">
+        <h3>Notebooks</h3>
+        <p>Beautiful journals and planners.</p>
+    </div>
 
-        <button type="submit">Send Message</button>
-    </form>
+    <div class="book-card">
+        <img src="images/ball.jpg" alt="Sports themed item">
+        <h3>Sports</h3>
+        <p>Books and merchandise for sports fans.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/brie.jpg" alt="Lifestyle item">
+        <h3>Lifestyle</h3>
+        <p>Curated lifestyle reads and cozy finds.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/eat.jpg" alt="Cookbooks">
+        <h3>Cookbooks</h3>
+        <p>Delicious inspiration for every kitchen.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/glory.jpg" alt="Inspirational books">
+        <h3>Inspirational</h3>
+        <p>Motivational and uplifting reads.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/sorcerer.jpg" alt="Fantasy novels">
+        <h3>Fantasy</h3>
+        <p>Magical adventures and epic storytelling.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/stickers.jpg" alt="Bookstore stickers">
+        <h3>Stickers</h3>
+        <p>Fun and creative book-themed stickers.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/stickets.jpg" alt="Event tickets">
+        <h3>Event Tickets</h3>
+        <p>Tickets for bookstore events.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/tote.jpg" alt="Book tote bag">
+        <h3>Tote Bags</h3>
+        <p>Stylish totes for your next haul.</p>
+    </div>
+
+    <div class="book-card">
+        <img src="images/travel.jpg" alt="Travel books">
+        <h3>Travel</h3>
+        <p>Explore the world through reading.</p>
+    </div>
+
 </section>
 
 <footer>
@@ -40,6 +93,4 @@
 
 </body>
 </html>
-
-   
       
