--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>About | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Book Haven Bookstore</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +18,20 @@
     </nav>
 </header>
 
-<section>
-    <h2>About Us</h2>
-    <p>Book Haven Bookstore is a cozy community bookstore dedicated to inspiring readers of all ages. We offer a curated selection of books, magazines, and special events that bring our community together.</p>
-    <p>Our mission is to create a welcoming space where imagination, learning, and connection thrive.</p>
+<section class="about-section">
+    <div class="about-content">
+        <div class="about-text">
+            <h2>About Book Haven</h2>
+            <p>
+                Book Haven is your local independent bookstore dedicated to 
+                connecting readers with stories that inspire, educate, and entertain.
+            </p>
+            <p>
+                We proudly support independent authors and host community events,
+                book clubs, and author signings.
+            </p>
+        </div>
+    </div>
 </section>
 
 <footer>
