--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Contact | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Book Haven Bookstore</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,19 +18,19 @@
     </nav>
 </header>
 
-<section>
+<section class="contact-section">
     <h2>Contact Us</h2>
-    <form>
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br><br>
+    <form class="contact-form">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" required>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br><br>
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
 
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4"></textarea><br><br>
+        <label for="message">Message</label>
+        <textarea id="message" rows="5" required></textarea>
 
-        <input type="submit" value="Send Message">
+        <button type="submit">Send Message</button>
     </form>
 </section>
 
