--- a/events.html
+++ b/events.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Events | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - Book Haven Bookstore</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
@@ -20,51 +19,39 @@
     </nav>
 </header>
 
-<section>
+<section class="page-header">
     <h2>Upcoming Events</h2>
+    <p>Join us for exciting community gatherings.</p>
+</section>
 
-    <div class="events-container">
+<section class="events-grid">
 
-        <div class="event-card">
-            <h3>📚 Author Meet & Greet</h3>
-            <p><strong>Date:</strong> March 15, 2026</p>
-            <p><strong>Time:</strong> 3:00 PM – 5:00 PM</p>
-            <p>Meet local fantasy author Joan Marie Verba as she discusses
-            <em>Sorcerer's Shadowed Chronicles</em>. Book signing included.</p>
-        </div>
-
-        <div class="event-card">
-            <h3>👧 Children’s Storytime</h3>
-            <p><strong>Date:</strong> March 22, 2026</p>
-            <p><strong>Time:</strong> 11:00 AM</p>
-            <p>A fun and interactive reading session for children ages 4–8.
-            Snacks and coloring sheets provided!</p>
-        </div>
-
-        <div class="event-card">
-            <h3>☕ Book Club Night</h3>
-            <p><strong>Date:</strong> April 2, 2026</p>
-            <p><strong>Time:</strong> 6:30 PM</p>
-            <p>Join our monthly book club discussion featuring
-            <em>Glory Riders</em>. Coffee and pastries available.</p>
-        </div>
-
-        <div class="event-card">
-            <h3>🎨 Creative Writing Workshop</h3>
-            <p><strong>Date:</strong> April 10, 2026</p>
-            <p><strong>Time:</strong> 5:00 PM – 7:00 PM</p>
-            <p>Learn storytelling techniques and character development
-            from experienced local writers. All skill levels welcome.</p>
-        </div>
-
+    <div class="event-card">
+        <h3>Author Meet & Greet</h3>
+        <p>March 15, 2026</p>
+        <p>Meet local authors and enjoy book signings.</p>
     </div>
+
+    <div class="event-card">
+        <h3>Children’s Story Hour</h3>
+        <p>April 2, 2026</p>
+        <p>A fun reading session for young readers.</p>
+    </div>
+
+    <div class="event-card">
+        <h3>Book Club Night</h3>
+        <p>April 20, 2026</p>
+        <p>Discuss this month’s featured novel.</p>
+    </div>
+
 </section>
 
 <footer>
-    <p>&copy; 2026 Book Haven Bookstore</p>
+    <p>© 2026 Book Haven Bookstore</p>
 </footer>
 
 </body>
 </html>
+
 
   
