--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,10 @@
 
         <button type="submit">Send Message</button>
     </form>
+    <section class="subscribe-section">
+  <h3>Stay Connected</h3>
+  <p>Subscribe to receive updates about new books and events.</p>
+  <button id="subscribeBtn" class="btn">Subscribe</button>
 </section>
 
 <footer>
