--- a/gallery.html
+++ b/gallery.html
@@ -29,60 +29,70 @@
         <img src="images/Notebooks.jpg" alt="Notebooks collection">
         <h3>Notebooks</h3>
         <p>Beautiful journals and planners.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/ball.jpg" alt="Sports themed item">
         <h3>Sports</h3>
         <p>Books and merchandise for sports fans.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/brie.jpg" alt="Lifestyle item">
         <h3>Lifestyle</h3>
         <p>Curated lifestyle reads and cozy finds.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/eat.jpg" alt="Cookbooks">
         <h3>Cookbooks</h3>
         <p>Delicious inspiration for every kitchen.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/glory.jpg" alt="Inspirational books">
         <h3>Inspirational</h3>
         <p>Motivational and uplifting reads.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/sorcerer.jpg" alt="Fantasy novels">
         <h3>Fantasy</h3>
         <p>Magical adventures and epic storytelling.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/stickers.jpg" alt="Bookstore stickers">
         <h3>Stickers</h3>
         <p>Fun and creative book-themed stickers.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/stickets.jpg" alt="Event tickets">
         <h3>Event Tickets</h3>
         <p>Tickets for bookstore events.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/tote.jpg" alt="Book tote bag">
         <h3>Tote Bags</h3>
         <p>Stylish totes for your next haul.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/travel.jpg" alt="Travel books">
         <h3>Travel</h3>
         <p>Explore the world through reading.</p>
+        <button class="addCartBtn btn">Add to Cart</button>
     </div>
 
 </section>
