--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,9 @@
         <h3>Notebooks</h3>
         <p>Beautiful journals and planners.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -38,6 +41,9 @@
         <h3>Sports</h3>
         <p>Books and merchandise for sports fans.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -45,6 +51,9 @@
         <h3>Lifestyle</h3>
         <p>Curated lifestyle reads and cozy finds.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -52,6 +61,9 @@
         <h3>Cookbooks</h3>
         <p>Delicious inspiration for every kitchen.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -59,6 +71,9 @@
         <h3>Inspirational</h3>
         <p>Motivational and uplifting reads.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -66,6 +81,9 @@
         <h3>Fantasy</h3>
         <p>Magical adventures and epic storytelling.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -73,6 +91,9 @@
         <h3>Stickers</h3>
         <p>Fun and creative book-themed stickers.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -80,6 +101,9 @@
         <h3>Event Tickets</h3>
         <p>Tickets for bookstore events.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -87,6 +111,9 @@
         <h3>Tote Bags</h3>
         <p>Stylish totes for your next haul.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
     <div class="book-card">
@@ -94,6 +121,9 @@
         <h3>Travel</h3>
         <p>Explore the world through reading.</p>
         <button class="addCartBtn btn">Add to Cart</button>
+        <section class="cart-actions">
+  <button id="clearCartBtn" class="btn">Clear Cart</button>
+</section>
     </div>
 
 </section>
