--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <script src="script.js"></script>
+    <script src="script.js"></script>
 <body>
 
 <header>
