--- a/gallery.html
+++ b/gallery.html
@@ -128,6 +128,19 @@
 
 <footer>
     <p>© 2026 Book Haven Bookstore</p>
+    </section>  <!-- end of gallery-grid -->
+
+<section class="cart-actions">
+  <button id="processOrderBtn" class="btn">Process Order</button>
+</section>
+
+<footer>
+  <p>© 2026 Book Haven Bookstore</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
 </footer>
 <script src="script.js"></script>
 </body>
