--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,9 @@
     <title>Gallery | Book Haven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-</head>   
+</head>
 <body>
+
 <header>
     <h1>Book Haven Bookstore</h1>
     <nav>
@@ -29,9 +30,7 @@
         <h3>Notebooks</h3>
         <p>Beautiful journals and planners.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
     <div class="book-card">
@@ -39,9 +38,7 @@
         <h3>Sports</h3>
         <p>Books and merchandise for sports fans.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
     <div class="book-card">
@@ -49,59 +46,15 @@
         <h3>Lifestyle</h3>
         <p>Curated lifestyle reads and cozy finds.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
     <div class="book-card">
         <img src="images/eat.jpg" alt="Cookbooks">
         <h3>Cookbooks</h3>
-        <p>Delicious inspiration for every kitchen.</p>
+        <p>Delicious inspiration for your kitchen.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
-    </div>
-
-    <div class="book-card">
-        <img src="images/glory.jpg" alt="Inspirational books">
-        <h3>Inspirational</h3>
-        <p>Motivational and uplifting reads.</p>
-        <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
-    </div>
-
-    <div class="book-card">
-        <img src="images/sorcerer.jpg" alt="Fantasy novels">
-        <h3>Fantasy</h3>
-        <p>Magical adventures and epic storytelling.</p>
-        <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
-    </div>
-
-    <div class="book-card">
-        <img src="images/stickers.jpg" alt="Bookstore stickers">
-        <h3>Stickers</h3>
-        <p>Fun and creative book-themed stickers.</p>
-        <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
-    </div>
-
-    <div class="book-card">
-        <img src="images/stickets.jpg" alt="Event tickets">
-        <h3>Event Tickets</h3>
-        <p>Tickets for bookstore events.</p>
-        <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
     <div class="book-card">
@@ -109,9 +62,7 @@
         <h3>Tote Bags</h3>
         <p>Stylish totes for your next haul.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
     <div class="book-card">
@@ -119,30 +70,19 @@
         <h3>Travel</h3>
         <p>Explore the world through reading.</p>
         <button class="addCartBtn btn">Add to Cart</button>
-        <section class="cart-actions">
-  <button id="clearCartBtn" class="btn">Clear Cart</button>
-</section>
+        <button class="clearCartBtn btn">Clear Cart</button>
     </div>
 
 </section>
 
-<footer>
-    <p>© 2026 Book Haven Bookstore</p>
-    </section>  <!-- end of gallery-grid -->
-
 <section class="cart-actions">
-  <button id="processOrderBtn" class="btn">Process Order</button>
+    <button id="processOrderBtn" class="btn">Process Order</button>
 </section>
 
 <footer>
-  <p>© 2026 Book Haven Bookstore</p>
+    <p>© 2026 Book Haven Bookstore</p>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
-</footer>
-<script src="script.js"></script>
-</body>
-</html>
-      
