--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,15 @@
 <section class="cart-actions">
     <button id="processOrderBtn" class="btn">Process Order</button>
 </section>
+<button id="viewCartBtn" class="btn">View Cart</button>
 
+<div id="cartModal" class="modal">
+    <div class="modal-content">
+        <span id="closeCart" class="close">&times;</span>
+        <h2>Your Cart</h2>
+        <ul id="cartItems"></ul>
+    </div>
+</div>
 <footer>
     <p>© 2026 Book Haven Bookstore</p>
 </footer>
